Actualización PresupuestoFranciscoAMP, JSTL y Lenguaje de expresiones.
Se alade dependiencia:

<!-- https://mvnrepository.com/artifact/jstl/jstl -->
<dependency>
    <groupId>jstl</groupId>
    <artifactId>jstl</artifactId>
    <version>1.2</version>
</dependency>

Se elimina la carperta por ser de utilizadad.

Se crean los archivos de estilo indexCss.css y presupuestoStyleLe.css

Se modifican varios archivos para el fucionamiento de la aplicación.

Se rectifica el archivo web.xml para la visualización de páginas de error.

31/05/2020
by Francisco Antonio Murillo Pacheco

--- a/src/main/webapp/CSS/presupuestoStyleLe.css
+++ b/src/main/webapp/CSS/presupuestoStyleLe.css
@@ -1,6 +1,6 @@
 
 /* 
-    Created on : 25-may-2020, 19:48:21
+    Created on : 31-may-2020, 19:47:55
     Author     : Francisco_Antonio
 */
 html{
@@ -108,4 +108,27 @@ tr{
 }
 #enlaceMenu:hover{
     color: #000;
+}
+
+
+.float{
+    float: left;
+    margin: 5%;
+}
+.clear{
+    clear: left;
+    margin-left: 20%;
+}
+.res{
+    font-weight: bolder;
+}
+.enl{
+    clear: both;
+}
+.contenido{
+    width: 100%;
+    overflow: hidden;
+}
+.cap{
+    text-transform: capitalize;
 }
